# RoboMaster-Vision2020

./: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.bak  README.md  autorun.sh  cmake_install.cmake  config.h  config.h.in  constants.h  main.cpp  main.h
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
Codes/: CMakeLists.txt
Codes/ArmorFinder/: CMakeLists.txt
Codes/ArmorFinder/include/: ArmorBox.h  ArmorFinder.h  AutoAiming.h  FindLightBlobs.h  stateClassifyingTarget.h  stateSearchingTarget.h  stateTrackingTarget.h
Codes/ArmorFinder/src/: ArmorBox.cpp  ArmorDetect.cpp  AutoAiming.cpp  FindLightBlobs.cpp  LightBox.cpp  stateClassifyingTarget.cpp  stateSearchingTarget.cpp  stateTrackingTarget.cpp
Codes/Camera/: CMakeLists.txt  Makefile  cmake_install.cmake
Codes/Camera/include/: CameraInit.h  CameraParams.h  MvCameraControl.h  MvDeviceBase.h  MvErrorDefine.h  MvGigEDevice.h  MvInclude.h  MvUsb3VDevice.h  PixelType.h  TlFactory.h
Codes/Camera/src/: CameraInit.cpp
Codes/Can/: CMakeLists.txt
Codes/Can/include/: canManifold2G.h  mcudata.h
Codes/Can/src/: canManifold2G.cpp  mcudata.cpp
Codes/Enegry/include/: energy.h  param_struct_define.h
Codes/Enegry/src/: Energy.cpp  EnergyClear.cpp  EnergyFinder.cpp  EnergyInit.bak  EnergyMain.cpp  EnergyRun.cpp  JudgeContour.cpp  ShowEnergyArmors.cpp  Structing.cpp  TemplateMatch.cpp  enegyTop.cpp
Codes/Energy/: CMakeLists.txt
Codes/Energy/include/: energy.h
Codes/Kalman/: CMakeLists.txt
Codes/Kalman/include/: kalmanfilter.h
Codes/Kalman/src/: kalmanfilter.bak  kalmanfilter.cpp
Codes/Number/: CMakeLists.txt
Codes/Number/include/: GetFeature.h
Codes/Number/src/: GetFeature.cpp
Codes/Preprocess/: CMakeLists.txt
Codes/Preprocess/include/: Preprocess.h
Codes/Preprocess/src/: Preprocess.cpp  kalman.cpp
Codes/Tools/: CMakeLists.txt
Codes/Tools/include/: log.h  options.h
Codes/Tools/src/: options.cpp
