#CMake最低版本要求
cmake_minimum_required(VERSION 3.10)

#set(header2son2son "${header2son}" CACHE INTERNAL "头文件传递")
ADD_SUBDIRECTORY(ArmorFinder)
ADD_SUBDIRECTORY(Camera)
ADD_SUBDIRECTORY(Can)
ADD_SUBDIRECTORY(Energy)
ADD_SUBDIRECTORY(Kalman)
ADD_SUBDIRECTORY(Number)
ADD_SUBDIRECTORY(Preprocess)
ADD_SUBDIRECTORY(Tools)